# autodev

./: .gitignore  AGENTS.md  ARCHIVED.md  COMPLETED.md  Cargo.toml  DESIGN.md  IMPLEMENTATION_PLAN.md  LEARNINGS.md  README.md  REVIEW.md  WORKLIST.md  build.rs  pyproject.toml
docs/: README.md  adoption-guide.md  audit-doctrine-template.md  operating-model.md  verification-receipt-schema.md
genesis/: ASSESSMENT.md  DESIGN.md  FOCUS.md  GENESIS-REPORT.md  PLANS.md  SPEC.md
scripts/: run-task-verification.sh  verification_receipt.py
specs/: 050426-nemesis-audit.md  220426-agent-backend-execution.md  220426-artifact-formats-and-task-queue.md  220426-audit-doctrine-pass.md  220426-bug-and-nemesis-hardening.md  220426-build-provenance-and-ci-bootstrap.md  220426-cli-command-surface.md  220426-execution-loop-and-parallel.md  220426-planning-pipeline-corpus-gen-reverse.md  220426-quality-commands-qa-health-review.md  220426-quota-routing-and-credential-hardening.md  220426-readme-truth-pass.md  220426-release-ship.md  220426-shared-util-layer.md  220426-steward-mid-flight-reconciliation.md  220426-symphony-linear-orchestration.md  230426-backend-invocation-policy-and-model-routing.md  230426-checkpoint-security-and-artifact-policy.md  230426-first-run-ci-and-installed-binary-proof.md  230426-parallel-loop-and-lane-recovery.md  230426-planning-corpus-and-generation.md  230426-quality-pipelines-and-release-lifecycle.md  230426-quota-router-and-credential-safety.md  230426-shared-task-parser-and-blocked-preservation.md  230426-symphony-workflow-and-linear-sync.md  230426-verification-receipts-and-completion-evidence.md  300426-audit-nemesis-and-report-only-lifecycle.md  300426-corpus-state-and-planning-root-safety.md  (+9 more)
src/: main.rs  (+43 more)
(+72 files in other folders)
