[package]
name = "autodev"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Lightweight repo-root planning and execution workflow"

[[bin]]
name = "auto"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
console = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
