[package]
name = "autodev"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Lightweight repo-root planning and execution workflow"

[[bin]]
name = "auto"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
console = "0.15"
dirs = "6"
fd-lock = "4"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
sha2 = "0.10"
toml = "0.8"
